# littlevGL-ESP32

./: .gitignore  .gitmodules
main/: CMakeLists.txt  connect.c  main.c  usr_sntp.c  usr_sntp.h
main/include/: connect.h
